--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 plugins {
+//	id 'java'
+//	id 'org.springframework.boot' version '3.4.1'
+//	id 'io.spring.dependency-management' version '1.1.7'
 	id 'java'
-	id 'org.springframework.boot' version '3.4.1'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.springframework.boot' version '3.3.4'
+	id 'io.spring.dependency-management' version '1.1.6'
 }
 
 group = 'com.example'
@@ -35,6 +38,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'  //swagger
+
 }
 
 tasks.named('test') {
